--- a/StowAway/Base.lproj/Main.storyboard
+++ b/StowAway/Base.lproj/Main.storyboard
@@ -1424,7 +1424,7 @@
                             <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" misplaced="YES" hidesWhenStopped="YES" animating="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="7XM-fk-vcd">
                                 <rect key="frame" x="142" y="187" width="37" height="37"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="color" patternImage="AF71C578-D93E-4982-B952-A23A478029EE" colorSpace="pattern"/>
+                                <color key="color" patternImage="8281DB90-00A8-4EA7-8E6E-43882081280B" colorSpace="pattern"/>
                             </activityIndicatorView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="wood-grain-2.png" translatesAutoresizingMaskIntoConstraints="NO" id="rIt-U9-bXz">
                                 <rect key="frame" x="0.0" y="434" width="320" height="46"/>
@@ -1646,33 +1646,39 @@
                                 <rect key="frame" x="0.0" y="187" width="320" height="168"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <subviews>
-                                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Your ride will finalize atleast 15mins before departure." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UaF-GO-yEY">
-                                        <rect key="frame" x="0.0" y="5" width="320" height="21"/>
+                                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Your ride will finalize atleast 15mins before departure." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UaF-GO-yEY">
+                                        <rect key="frame" x="0.0" y="14" width="320" height="21"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="21" id="eM7-UX-eoH"/>
+                                        </constraints>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="12"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" animating="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="U5Q-XR-sJo">
                                         <rect key="frame" x="135" y="65" width="37" height="37"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <color key="color" patternImage="7BEC775D-079A-4A0A-B1E0-409955C68D3A" colorSpace="pattern"/>
+                                        <color key="color" patternImage="6120E31E-2BEB-4483-A61D-B8D0361EBC55" colorSpace="pattern"/>
                                     </activityIndicatorView>
-                                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Ride to work tomorrow between 10:30 - 10:45 am" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="280" translatesAutoresizingMaskIntoConstraints="NO" id="3Me-33-mwi">
-                                        <rect key="frame" x="20" y="34" width="280" height="55"/>
+                                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Ride to work tomorrow between 10:30 - 10:45 am" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="280" translatesAutoresizingMaskIntoConstraints="NO" id="3Me-33-mwi">
+                                        <rect key="frame" x="20" y="47" width="280" height="55"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="21"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="22"/>
                                         <color key="textColor" red="0.25882352939999997" green="0.62745098040000002" blue="0.66274509800000003" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="We'll send you push notification, as we find people with similar requests or finalize." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="284" translatesAutoresizingMaskIntoConstraints="NO" id="rVu-7r-i6Y">
+                                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="We'll send you push notification, as we find people with similar requests or finalize." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="284" translatesAutoresizingMaskIntoConstraints="NO" id="rVu-7r-i6Y">
                                         <rect key="frame" x="20" y="105" width="284" height="36"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Nvp-gI-qSz">
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Nvp-gI-qSz">
                                         <rect key="frame" x="91" y="144" width="125" height="22"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="22" id="nhQ-iD-fUt"/>
+                                        </constraints>
                                         <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                         <state key="normal" title="Cancel This Request">
                                             <color key="titleColor" red="0.47843137250000001" green="0.78039215689999997" blue="0.81176470590000005" alpha="1" colorSpace="calibratedRGB"/>
@@ -1685,16 +1691,20 @@
                                 </subviews>
                                 <color key="backgroundColor" red="1" green="0.99502558297574695" blue="0.92248104749216908" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="centerX" secondItem="U5Q-XR-sJo" secondAttribute="centerX" constant="6.5" id="1Rb-de-baA"/>
-                                    <constraint firstAttribute="centerX" secondItem="UaF-GO-yEY" secondAttribute="centerX" constant="-0.5" id="2ri-IQ-hr2"/>
-                                    <constraint firstAttribute="centerX" secondItem="rVu-7r-i6Y" secondAttribute="centerX" constant="-2" id="Mie-mk-2X1"/>
-                                    <constraint firstAttribute="bottom" secondItem="Nvp-gI-qSz" secondAttribute="bottom" constant="2" id="N2H-Vr-vNi"/>
-                                    <constraint firstAttribute="centerX" secondItem="Nvp-gI-qSz" secondAttribute="centerX" constant="6.5" id="OuJ-Bx-lHz"/>
-                                    <constraint firstAttribute="centerY" secondItem="3Me-33-mwi" secondAttribute="centerY" constant="22.5" id="bch-Wc-QBc"/>
-                                    <constraint firstItem="Nvp-gI-qSz" firstAttribute="top" secondItem="rVu-7r-i6Y" secondAttribute="bottom" constant="3" id="mZD-aI-wru"/>
-                                    <constraint firstAttribute="centerX" secondItem="3Me-33-mwi" secondAttribute="centerX" id="mxo-g2-A81"/>
-                                    <constraint firstAttribute="centerY" secondItem="U5Q-XR-sJo" secondAttribute="centerY" constant="0.5" id="oka-DJ-lgM"/>
-                                    <constraint firstItem="UaF-GO-yEY" firstAttribute="top" secondItem="mnD-o7-NLO" secondAttribute="top" constant="5" id="shd-y7-D5c"/>
+                                    <constraint firstItem="Nvp-gI-qSz" firstAttribute="leading" secondItem="mnD-o7-NLO" secondAttribute="leading" constant="91" id="DFs-ni-UI2"/>
+                                    <constraint firstItem="3Me-33-mwi" firstAttribute="leading" secondItem="mnD-o7-NLO" secondAttribute="leading" constant="20" symbolic="YES" id="DzA-6H-jta"/>
+                                    <constraint firstItem="3Me-33-mwi" firstAttribute="leading" secondItem="rVu-7r-i6Y" secondAttribute="leading" id="En6-v0-b20"/>
+                                    <constraint firstItem="Nvp-gI-qSz" firstAttribute="centerX" secondItem="U5Q-XR-sJo" secondAttribute="centerX" id="GIs-h3-sL0"/>
+                                    <constraint firstItem="3Me-33-mwi" firstAttribute="top" secondItem="UaF-GO-yEY" secondAttribute="bottom" constant="12" id="M3l-Z6-twf"/>
+                                    <constraint firstItem="rVu-7r-i6Y" firstAttribute="top" secondItem="U5Q-XR-sJo" secondAttribute="bottom" constant="3" id="N1c-rB-inZ"/>
+                                    <constraint firstItem="3Me-33-mwi" firstAttribute="centerX" secondItem="UaF-GO-yEY" secondAttribute="centerX" id="Xxd-rC-8ei"/>
+                                    <constraint firstItem="3Me-33-mwi" firstAttribute="bottom" secondItem="U5Q-XR-sJo" secondAttribute="bottom" id="Yr0-cn-Ty8"/>
+                                    <constraint firstAttribute="bottom" secondItem="Nvp-gI-qSz" secondAttribute="bottom" constant="2" id="ZBU-dx-gdY"/>
+                                    <constraint firstItem="UaF-GO-yEY" firstAttribute="leading" secondItem="mnD-o7-NLO" secondAttribute="leading" id="cI4-ra-zqN"/>
+                                    <constraint firstAttribute="trailing" secondItem="3Me-33-mwi" secondAttribute="trailing" constant="20" symbolic="YES" id="fiI-3T-Biz"/>
+                                    <constraint firstItem="U5Q-XR-sJo" firstAttribute="top" secondItem="UaF-GO-yEY" secondAttribute="bottom" constant="30" id="ndl-Co-yTj"/>
+                                    <constraint firstItem="UaF-GO-yEY" firstAttribute="top" secondItem="mnD-o7-NLO" secondAttribute="top" constant="14" id="qao-IY-0c4"/>
+                                    <constraint firstItem="Nvp-gI-qSz" firstAttribute="top" secondItem="rVu-7r-i6Y" secondAttribute="bottom" constant="3" id="sRN-Fe-6pC"/>
                                 </constraints>
                             </view>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="footer.png" translatesAutoresizingMaskIntoConstraints="NO" id="lra-f2-ZOm">
@@ -1998,7 +2008,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="7BEC775D-079A-4A0A-B1E0-409955C68D3A" width="320" height="460">
+        <image name="6120E31E-2BEB-4483-A61D-B8D0361EBC55" width="320" height="460">
             <mutableData key="keyedArchiveRepresentation">
 YnBsaXN0MDDUAQIDBAUGPj9YJHZlcnNpb25YJG9iamVjdHNZJGFyY2hpdmVyVCR0b3ASAAGGoK4HCBMU
 GR4fIyQsLzI4O1UkbnVsbNUJCgsMDQ4PEBESVk5TU2l6ZVYkY2xhc3NcTlNJbWFnZUZsYWdzVk5TUmVw
@@ -11885,7 +11895,7 @@ CQq/AAkKxAAJCswACQrPAAkK1AAJCtwACQrfAAkK8QAJCvQACQr5AAAAAAAABAEAAAAAAAAAQgAAAAAA
 AAAAAAAAAAAJCvs
 </mutableData>
         </image>
-        <image name="AF71C578-D93E-4982-B952-A23A478029EE" width="320" height="460">
+        <image name="8281DB90-00A8-4EA7-8E6E-43882081280B" width="320" height="460">
             <mutableData key="keyedArchiveRepresentation">
 YnBsaXN0MDDUAQIDBAUGPj9YJHZlcnNpb25YJG9iamVjdHNZJGFyY2hpdmVyVCR0b3ASAAGGoK4HCBMU
 GR4fIyQsLzI4O1UkbnVsbNUJCgsMDQ4PEBESVk5TU2l6ZVYkY2xhc3NcTlNJbWFnZUZsYWdzVk5TUmVw
